[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pydantic>=2.6.0",
    "pip>=23.3.2",
    "install>=1.3.5",
    "requests>=2.31.0",
    "python-dotenv==0.19.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
update-data = "build_resume:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "coverage>=7.4.1",
    "ruff>=0.1.15",
    "pydantic>=2.6.0",
    "pip>=23.3.2",
    "install>=1.3.5",
    "types-requests>=2.31.0.20240125",
    "python-dotenv==0.19.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/resume_builder"]
