[tool.poetry]
name = "resumer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
pytest = "^8.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
coverage = "^7.4.1"
black = "^24.1.1"
pydantic = "^2.6.0"
requests = "^2.31.0"
python-dotenv = "0.19.0"
types-requests = "^2.31.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
